--- a/templates/header.html
+++ b/templates/header.html
@@ -8,8 +8,9 @@
 
 {% block body %}
 
-<div class="jumbotron p-3">
+<div class="container-fluid text-sm-center p-5 bg-light">
     <div class="well text-container">
+        
 
         <h1>Python Flask CRUD Web Application Development</h1>
 
