--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,16 @@
 
 {% block body %} 
 
-<h1>From Template Inheritance</h1>
+<div class="container">
+    <div class="row">
+        <div class="col md-12">
+            <div class="jumbotron p-3">
+                <h2>Manage <b>Employees</b> <button type="button" class="btn btn-success"></button></h2>
+            </div>
+
+        </div>
+    </div>
+</div>
 
 
 {% endblock %}
