--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,39 @@
     <div class="row">
         <div class="col md-12">
             <div class="jumbotron p-3">
-                <h2>Manage <b>Employees</b> <button type="button" class="btn btn-success"></button></h2>
+                <h2>Manage <b>Books</b> <button type="button" class="btn btn-success float-end"
+                    data-toggle="modal" data-target="#mymodal">I Read Something</button></h2>
+
+
+
+                    <table class="table table-hover table-dark">
+
+                        <tr>
+
+                            <th>Title</th>
+                            <th>Author</th>
+                            <th>Year</th>
+                            <th>Status</th>
+                            <th>Action</th>
+
+                        </tr>
+                        
+
+                        <tr>
+                            <td>Big Gods</td>
+                            <td>Norenzayan</td>
+                            <td>2013</td>
+                            <td>Read</td>
+
+
+                            <td>
+                                <a href="" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit">Edit</a>
+                                <a href="" class="btn btn-danger btn-xs" onclick="return confirm('Are You Sure To Delete ?')">Delete</a>
+                        </tr>
+
+
+
+                    </table>
             </div>
 
         </div>
