--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 
 {% block body %} {%endblock %}
 
-<script type="text/javascript" src="{{url_for('static', filename='js/jquery-3.2.1.min.js')}}"></script>
+<script type="text/javascript" src="{{url_for('static', filename='js/jquery.min.js')}}"></script>
 <script type="text/javascript" src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
 
 </body>
