--- a/templates/header.html
+++ b/templates/header.html
@@ -8,7 +8,7 @@
 
 {% block body %}
 
-<div class="container-fluid text-sm-center p-5 bg-light">
+<div class="jumbotron p-3">  <!--container-fluid text-sm-center p-5 bg-light-->
     <div class="well text-container">
         
 
