--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,10 @@
 <div class="container">
     <div class="row">
         <div class="col md-12">
+
             <div class="jumbotron p-3">
-                <h2>Manage <b>Books</b> <button type="button" class="btn btn-success float-end"
+
+                <h2>Manage <b>Books</b> <button type="button" class="btn btn-success float-right"
                     data-toggle="modal" data-target="#mymodal">I Read Something</button></h2>
 
 
@@ -40,12 +42,81 @@
                             <td>
                                 <a href="" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit">Edit</a>
                                 <a href="" class="btn btn-danger btn-xs" onclick="return confirm('Are You Sure To Delete ?')">Delete</a>
+
+
+
+                            </td>
+                            
                         </tr>
 
 
 
                     </table>
+
+
             </div>
+
+<!-- Modal Add Book -->
+
+<div id="mymodal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+
+                <h4 class="modal-title">I Read Something</h4>
+            </div>
+            <div class="modal-body">
+
+                <form action="" method="POST">
+
+                    <div class="form-group">
+
+                        <label>Title:</label>
+                        <input type="text" class="form-control" name="name" required="1">
+
+
+                    </div>
+
+                    <div class="form-group">
+
+
+                        <label>Author:</label>
+                        <input type="email" class="form-control" name="email" required="1">
+
+                    </div>
+
+                    <div class="form-group">
+
+
+                        <label>Year:</label>
+                        <input type="number" class="form-control" name="phone" required="1">
+
+
+                    </div>
+
+
+                    <div class="form-group">
+
+
+                        <button class="btn btn-primary" type="submit">Add Book</button>
+
+
+                    </div>
+
+
+                </form>
+            </div>
+
+            <div class="modal-footer">
+
+
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+            </div>
+        </div>
+
+    </div>
+</div>
 
         </div>
     </div>
