--- a/templates/index.html
+++ b/templates/index.html
@@ -18,30 +18,59 @@
                     data-toggle="modal" data-target="#mymodal">I Read Something</button></h2>
 
 
+                    {% with messages = get_flashed_messages() %}
+
+                    {% if messages %}
+
+                    {% for message in messages %}
+
+                    <div class="alert alert-success alert-dismissable" role="alert">
+
+                        <button type="button" class="close" data-dismiss="alert" aria-label="close">
+
+                            <span area-hidden="true">x</span>
+
+                        </button>
+
+                    {{message}}
+
+                    </div>
+
+
+                    {% endfor %}
+
+                    {% endif %}
+                    {% endwith %}
+
+
+
+
+
 
                     <table class="table table-hover table-dark">
 
                         <tr>
 
+                            <th>ID</th>
                             <th>Title</th>
                             <th>Author</th>
                             <th>Year</th>
-                            <th>Status</th>
                             <th>Action</th>
 
                         </tr>
                         
+                        {% for row in books %}
 
                         <tr>
-                            <td>Big Gods</td>
-                            <td>Norenzayan</td>
-                            <td>2013</td>
-                            <td>Read</td>
+                            <td>{{row.id}}</td>
+                            <td>{{row.title}}</td>
+                            <td>{{row.author}}</td>
+                            <td>{{row.year}}</td>
 
 
                             <td>
-                                <a href="" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit">Edit</a>
-                                <a href="" class="btn btn-danger btn-xs" onclick="return confirm('Are You Sure To Delete ?')">Delete</a>
+                                <a href="/update/{{row.id}}" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit{{row.id}}">Edit</a>
+                                <a href="/delte/{{row.id}}" class="btn btn-danger btn-xs" onclick="return confirm('Are You Sure To Delete ?')">Delete</a>
 
 
 
@@ -51,7 +80,7 @@
 
                         <!-- Modal Edit Book -->
 
-<div id="modaledit" class="modal fade" role="dialog">
+<div id="modaledit{{row.id}}" class="modal fade" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -60,15 +89,15 @@
             </div>
             <div class="modal-body">
 
-                <form action="" method="POST">
+                <form action="{{url_for('update')}}" method="POST">
 
                     <div class="form-group">
 
                         <label>Title:</label>
-                         <input type="hidden" name="id" value="id">
+                         <input type="hidden" name="id" value="{{row.id}}">
 
 
-                        <input type="text" class="form-control" name="title" value="Big Gods">
+                        <input type="text" class="form-control" name="title" value="{{row.title}}">
 
 
                     </div>
@@ -77,7 +106,7 @@
 
 
                         <label>Author:</label>
-                        <input type="text" class="form-control" name="name" value="Norenzayan">
+                        <input type="text" class="form-control" name="author" value="{{row.author}}">
 
                     </div>
 
@@ -85,18 +114,9 @@
 
 
                         <label>Year:</label>
-                        <input type="number" class="form-control" name="year" value="2013">
+                        <input type="number" class="form-control" name="year" value="{{row.year}}">
 
 
-                    </div>
-
-                    <div class="form-group">
-                    
-                    
-                        <label>Status:</label>
-                        <input type="text" class="form-control" name="status" value="Read">
-                    
-                    
                     </div>
 
 
@@ -124,6 +144,8 @@
 </div>
 
 
+                        {% endfor %}
+
                     </table>
 
 
@@ -140,12 +162,12 @@
             </div>
             <div class="modal-body">
 
-                <form action="" method="POST">
+                <form action="{{url_for('insert')}}" method="POST">
 
                     <div class="form-group">
 
                         <label>Title:</label>
-                        <input type="text" class="form-control" name="name" required="1">
+                        <input type="text" class="form-control" name="title" required="1">
 
 
                     </div>
@@ -154,7 +176,7 @@
 
 
                         <label>Author:</label>
-                        <input type="email" class="form-control" name="email" required="1">
+                        <input type="text" class="form-control" name="author" required="1">
 
                     </div>
 
@@ -162,18 +184,9 @@
 
 
                         <label>Year:</label>
-                        <input type="number" class="form-control" name="phone" required="1">
+                        <input type="number" class="form-control" name="year" required="1">
 
 
-                    </div>
-
-                    <div class="form-group">
-                    
-                    
-                        <label>Status:</label>
-                        <input type="number" class="form-control" name="phone" required="1">
-                    
-                    
                     </div>
 
                     <div class="form-group">
