fixed 'delte' to 'delete'

--- a/templates/header.html
+++ b/templates/header.html
@@ -12,7 +12,7 @@
     <div class="well text-container">
         
 
-        <h1>Python Flask CRUD Web Application Development</h1>
+        <h1>Books I've Read (Python Flask CRUD App)</h1>
 
     </div>
 </div>
